--- a/assets/index.css
+++ b/assets/index.css
@@ -74,7 +74,7 @@ div {
   max-height: 90%;
   vertical-align: middle;
 }
-.button.info {
+.button.news {
   background-color: #52696f;
 }
 .button.search {
@@ -127,4 +127,39 @@ div {
   content: "";
   display: block;
   clear: both;
+}
+
+#about {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+  text-align: center;
+  transition: 0.6s;
+  background-color: rgba(255, 255, 255, 0.8);
+}
+#about .container {
+  margin-top: 10%;
+  background: #fff;
+  width: 100%;
+  max-width: 500px;
+  display: inline-block;
+  border-radius: 10px;
+  box-shadow: 0 0 5px #666;
+}
+#close {
+  display: inline-block;
+  background-color: #f00;
+  color: #fff;
+  padding: 3px 5px;
+  float: right;
+  border-radius: 0 10px 0 0;
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+#about h5 {
+  font-size: 1.5rem;
 }
