--- a/assets/index.css
+++ b/assets/index.css
@@ -163,3 +163,76 @@ div {
 #about h5 {
   font-size: 1.5rem;
 }
+
+#note {
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding-top: 5%;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+  transition: 0.3s;
+}
+#note.small {
+  padding-top: 0;
+  width: 100px;
+  height: 100px;
+}
+#note .noteContainer {
+  width: 95%;
+  max-width: 500px;
+  max-height: 95%;
+  overflow: auto;
+  background-color: #fff;
+  padding: 10px;
+  border-radius: 10px;
+  margin: 0 auto;
+  box-shadow: 0 0 3px #999;
+}
+#note h5 {
+  margin: 5px;
+  text-align: center;
+  font-size: 1.2rem;
+}
+#note h4 {
+  margin: 5px;
+  text-align: center;
+  font-size: 2rem;
+}
+#note h4 span {
+  font-size: 1rem;
+  color: #999;
+}
+#note p {
+  background-color: #d9edf7;
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: inset 0 0 3px #bce8f1;
+  color: #31708f;
+}
+#note.small .noteContainer {
+  padding: 5px;
+  cursor: pointer;
+}
+#note.small h5,
+#note.small p {
+  display: none;
+}
+#note.small h4 {
+  line-height: 2rem;
+}
+#closeNote {
+  display: inline-block;
+  background-color: #f00;
+  color: #fff;
+  padding: 3px 5px;
+  float: right;
+  border-radius: 0 10px 0 0;
+  font-size: 1.5rem;
+  cursor: pointer;
+  overflow: hidden;
+}
+#note.small #closeNote {
+  display: none;
+}
