--- a/assets/mobile.css
+++ b/assets/mobile.css
@@ -39,4 +39,21 @@
     padding: 1px;
     font-size: 1.8rem;
   }
+
+  #note.small {
+    width: auto;
+    height: auto;
+  }
+  #note.small .noteContainer {
+    padding: 3px;
+  }
+  #note.small h4 {
+    line-height: 1.2rem;
+    font-size: 1rem;
+    padding: 0;
+  }
+  #note.small h4 span {
+    display: none;
+    font-size: 0.5rem;
+  }
 }
