--- a/assets/index.css
+++ b/assets/index.css
@@ -136,7 +136,7 @@ div {
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 9999;
+  z-index: 10000;
   text-align: center;
   transition: 0.6s;
   background-color: rgba(255, 255, 255, 0.8);
@@ -149,6 +149,7 @@ div {
   display: inline-block;
   border-radius: 10px;
   box-shadow: 0 0 5px #666;
+  padding: 10px;
 }
 #close {
   display: inline-block;
