--- a/assets/index.css
+++ b/assets/index.css
@@ -347,3 +347,55 @@ div {
 .saleLog {
   width: 30%;
 }
+
+.chart {
+  background-image: linear-gradient(
+    to top,
+    rgba(0, 0, 0, 0.4) 1px,
+    transparent 2%
+  );
+  background-size: 100% 10px;
+  background-position: 0 1px;
+  margin: 10px auto;
+  padding: 2px;
+  list-style: none;
+  height: 50px;
+  width: 90%;
+  font-size: 0;
+  position: relative;
+}
+.chart:before {
+  content: "";
+  display: inline-block;
+  width: 0;
+  height: 100%;
+  vertical-align: bottom;
+}
+.chart:after {
+  position: absolute;
+  right: 100%;
+  top: -0.4rem;
+  padding-right: 2px;
+  font-size: 0.8rem;
+  content: attr(title);
+  word-wrap: break-word;
+}
+.chart li {
+  display: inline-block;
+  width: 12.5%;
+  height: 50%;
+  background: #e57b7f;
+  vertical-align: bottom;
+  position: relative;
+}
+.chart li span:before {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 100%;
+  font-size: 0.8rem;
+  display: block;
+  text-align: center;
+  content: attr(title);
+  word-wrap: break-word;
+}
