--- a/assets/index.css
+++ b/assets/index.css
@@ -212,12 +212,16 @@ div {
   font-size: 1rem;
   color: #999;
 }
-#note p {
+#note .content {
   background-color: #d9edf7;
   padding: 10px;
   border-radius: 5px;
   box-shadow: inset 0 0 3px #bce8f1;
   color: #31708f;
+}
+#note .content ul {
+  font-size: 0.9rem;
+  margin: 0;
 }
 #note.small .noteContainer {
   padding: 5px;
@@ -338,6 +342,11 @@ div {
 }
 .msgBubble img {
   width: 100%;
+}
+.bubble .msg {
+  color: #efefef;
+  display: inline-block;
+  padding: 10px 0;
 }
 
 .disable {
